--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,24 @@
-<p>
-  home works!
-</p>
+<div class="container color-dark">
+  <div class="col">
+    <p>
+      Add a bucket list item
+    </p>
+  </div>
+  <div class="col">
+    <p>Your bucket list</p>
+  </div>
+</div>
+<div class="container color-dark">
+  <div class="col">
+    <p class="sm">
+      Use this form below to add to bucket list
+    </p>
+    <form>
+      <input type="text" class="txt" name="item" placeholder="life goal ...">
+      <input type="submit" class="btn" value="Add Item">
+    </form>
+  </div>
+  <div class="col">
+    <p class="life-container">I want to climb a mountain</p>
+  </div>
+</div>
