--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </p>
   </div>
   <div class="col">
-    <p>Your bucket list</p>
+    <p>Your bucket list ({{ itemCount }})</p>
   </div>
 </div>
 <div class="container color-dark">
@@ -14,11 +14,11 @@
       Use this form below to add to bucket list
     </p>
     <form>
-      <input type="text" class="txt" name="item" placeholder="life goal ...">
-      <input type="submit" class="btn" value="Add Item">
+      <input type="text" class="txt" name="item" placeholder="life goal ..." [(ngModel)]="goalText">
+      <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
   <div class="col">
-    <p class="life-container">I want to climb a mountain</p>
+    <p class="life-container" *ngFor="let goal of goals">{{goal}}</p>
   </div>
 </div>
