--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <p>Your bucket list ({{ itemCount }})</p>
   </div>
 </div>
-<div class="container color-dark">
+<div class="container color-light" [@goals]="goals.length">
   <div class="col">
     <p class="sm">
       Use this form below to add to bucket list
