added remove click handler

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,6 @@
     </form>
   </div>
   <div class="col">
-    <p class="life-container" *ngFor="let goal of goals">{{goal}}</p>
+    <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeItem(i)">{{goal}}</p>
   </div>
 </div>
