id value hardcoded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <a routerLink="">Home</a>
   </li>
   <li>
-    <a routerLink="about">About</a>
+    <a routerLink="about/48">About</a>
   </li>
 </ul>
 
